[project]
name = "muaythai-cards"
version = "0.1.0"
description = "Muay Thai fighter card generator and Instagram publisher"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "beautifulsoup4",
    "playwright",
    "anthropic",
    "jinja2",
    "rembg",
    "pillow",
    "boto3",
    "python-dotenv",
    "sqlmodel",
    "pydantic-settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
