[project]
name = "muaythai-cards"
version = "0.1.0"
description = "Muay Thai fighter card generator and Instagram publisher"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "playwright",
    "anthropic",
    "jinja2",
    "rembg",
    "pillow",
    "boto3",
    "python-dotenv",
    "sqlmodel",
    "pydantic-settings",
    "apscheduler>=3.11.2",
    "tzdata>=2026.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
